Change the meaning of SWS (part 2).

--- a/priv/templates/base.html
+++ b/priv/templates/base.html
@@ -2,20 +2,20 @@
 <html lang="en">
 	<head> 
 		<meta charset="utf-8" /> 
-		<meta name="keywords" content="SWS Website System, Webmachine, Erlang, Django" /> 
-		<meta name="description" content="SWS Website System" /> 
-		<meta name="author" content="YOUR NAME HERE" /> 
+		<meta name="keywords" content="SWS, Simple Website System, Webmachine, Erlang, Django" /> 
+		<meta name="description" content="SWS: Simple Website System" /> 
+		<meta name="author" content="Martijn Rijkeboer" /> 
 		<link rel="stylesheet" media="screen" href="/lib/css/reset.css" /> 
 		<link rel="stylesheet" media="screen" href="/lib/css/site.css" /> 
 
-		<title>{% block title %}{% endblock %} &ndash; SWS Website System</title> 
+		<title>{% block title %}{% endblock %} &ndash; Simple Website System</title> 
 	</head> 
 	<body> 
 
 
 		<div class="header"> 
 			<div class="wrapper"> 
-				<h1 class="left">SWS Website System</h1> 
+				<h1 class="left">Simple Website System</h1> 
 				{% include "menu.html" %}
 			</div>
 		</div> 
