--- a/priv/templates/menu.html
+++ b/priv/templates/menu.html
@@ -1,13 +1,13 @@
 <ul class="right clear"> 
 	<li>
-	<a {% if menu == 'home' %} class="current" {% endif %} href="/">Home</a>
+	<a {% if uri == '/' %} class="current" {% endif %} href="/">Home</a>
 	</li> 
 
 	<li>
-	<a {% if menu == 'docs' %} class="current" {% endif %} href="/docs">Documentation</a>
+	<a {% if uri == '/docs' %} class="current" {% endif %} href="/docs">Documentation</a>
 	</li> 
 
 	<li>
-	<a {% if menu == 'license' %} class="current" {% endif %} href="/license">License</a>
+	<a {% if uri == '/license' %} class="current" {% endif %} href="/license">License</a>
 	</li> 
 </ul> 
