--- a/priv/templates/base.html
+++ b/priv/templates/base.html
@@ -28,7 +28,7 @@
 
 		<div class="footer"> 
 			<div class="wrapper">
-				<p>&copy; 2010 <a href="http://www.bunix.org/">Martijn Rijkeboer</a></p> 
+				<p>&copy; 2010-2011 <a href="http://www.bunix.org/">Martijn Rijkeboer</a></p> 
 			</div>
 		</div>
 
